gcc/testsuite/rust/rustc/ui/parser/suggest_misplaced_generics/struct.rs
// Issue: 103366 , Suggest fix for misplaced generic params
//@ run-rustfix

#[allow(unused)]
struct<T> Foo { x: T }
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }

fn main() {}

